# BBv3-Firmware

./: CMakeLists.txt  README.md  build.sh  cmd.txt
BenchBot/: BenchBot.componentinfo.xml  BenchBot.cppproj  library.cpp
BenchBot/Debug/: Makefile  library.d  makedep.mk
BenchBot/inc/: chars.h  commands.h  config.h  errors.h  gen.py  hash.py  motor.h  parser.h  states.h  types.h
MicrochipStudioVersion/: MicrochipStudioVersion.atsln  MicrochipStudioVersion.componentinfo.xml  MicrochipStudioVersion.cppproj  main.cpp
Wrappers/: test.py
main/: CMakeLists.txt  toolchain.cmake
main/modules/: CMakeLists.txt
main/modules/1.1.118/: CMakeLists.txt
main/modules/1.1.118/edc/: ATSAME53J18A.PIC  ATSAME53J19A.PIC  ATSAME53J20A.PIC  ATSAME53N19A.PIC  ATSAME53N20A.PIC
main/modules/1.1.118/include/: sam.h  same53.h
main/modules/1.1.118/include_mcc/: component-version.h  same53j18a.h  same53j19a.h  same53j20a.h  same53n19a.h  same53n20a.h  system_same53.h
main/modules/1.1.118/include_mcc/component/: ac.h  adc.h  aes.h  ccl.h  cmcc.h  dac.h  dmac.h  dsu.h  eic.h  evsys.h  freqm.h  gclk.h  gmac.h  hmatrixb.h  i2s.h  icm.h  mclk.h  nvmctrl.h  osc32kctrl.h  oscctrl.h  pac.h  pcc.h  pdec.h  pm.h  port.h  pukcc.h  qspi.h  ramecc.h  rstc.h  rtc.h  sdhc.h  sercom.h  supc.h  tc.h  tcc.h  trng.h  usb.h  wdt.h
main/modules/1.1.118/include_mcc/pio/: same53j18a.h  same53j19a.h  same53j20a.h  same53n19a.h  same53n20a.h
main/modules/4.5.0/: CMakeLists.txt
main/src/: CMakeLists.txt
model_cc/: CMakeLists.txt  Test.cpp
parser/: CMakeLists.txt  ClearCoreSim.cpp  parser.cpp
(+17 files in other folders)
